add: 댓글 작성자가 follow한 유저인지 체크하는 기능 추가